Adicionado Maven, atualizado para Java 11, varias limpezas.